--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://img.freepik.com/premium-photo/3d-visionary-icon-leader-with-long-term-focus-logo-illustration_762678-77931.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link href="/src/styles.css" rel="stylesheet"> -->
-    <title>Vite + React</title>
+    <title>3dVisionary</title>
   </head>
   <body>
     <div id="root"></div>
